Refatoração no layout do dashboard

--- a/src/app/dashboard/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard/dashboard.component.css
@@ -1,27 +1,41 @@
-#card-mapa {
-  width: 100%;
+p-calendar {
+  margin: 5px;
 }
 
-.container-grid {
-  margin: 0 auto;
+.container-card{
+  margin-top: 10px;
 }
 
-:host ::ng-deep .p-col-12 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.container-chart {
+  width: 50%;
 }
 
-:host ::ng-deep .p-col-4 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.container-heatmap {
+  width: 100%
+}
+
+:host ::ng-deep .p-multiselect {
+  margin: 5px;
 }
 
 :host ::ng-deep .p-dropdown {
-  margin: 10px;
+  margin: 5px;
 }
 
-:host ::ng-deep .p-calendar {
-  margin: 10px;
+@media(max-width: 950px) {
+  .container-chart {
+    width: 100%;
+  }
+}
+
+.container-message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+}
+
+:host ::ng-deep .p-inline-message  {
+  border-left: 6px solid #d9a300;
+  height: 50px;
 }
