--- a/src/app/dashboard/card-info/card-info.component.html
+++ b/src/app/dashboard/card-info/card-info.component.html
@@ -1,4 +1,4 @@
-<p-card [style]="{'width': '300px', 'height': '120px'}">
+<p-card [style]="{'width': '300px', 'height': '120px', 'margin': '10px'}">
   <div class="container-card">
     <img src={{imagem}}/>
     <div class="container-label">
