--- a/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
+++ b/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
@@ -40,7 +40,7 @@
                             </div>
 
                             <div class="botoes">
-                                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-button-text" pTooltip="Editar" tooltipPosition="bottom" [routerLink]="['/usuarios/edicao', user.uid]"></button>
+                                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-button-text" pTooltip="Editar" tooltipPosition="bottom" [routerLink]="['/usuarios/edicao', user.registration]"></button>
                                 <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-button-text" pTooltip="Excluir" tooltipPosition="bottom" (click)="confirmarExclusao(user)"></button>
                             </div>
                         </div>
