inicia listagem de incendios

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -35,6 +35,13 @@
             </a>
         </li>
 
+        <li class="navbar-menuitem">
+            <a routerLink="/incendios" (click)="omitir()">
+                <i class="fa fa-fire-extinguisher fa-1x menu-icon"></i>
+                <span>Incêndios</span>
+            </a>
+        </li>
+
         <li class="navbar-menuitem logout">
             <a (click)="logout()">
                 <i class="pi pi-sign-out menu-icon"></i>
