--- a/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.css
+++ b/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.css
@@ -21,6 +21,10 @@
     width: 17rem;
 }
 
+:host ::ng-deep .p-card:hover {
+    background-color: #b3e5fc
+}
+
 .card-footer.true {
     display: flex;
     align-items: center;
@@ -35,6 +39,7 @@
 
 :host ::ng-deep .p-card .p-card-footer {
     padding-top: .5rem;
+    margin-top: 0.5rem;
 }
 
 :host ::ng-deep .p-card {
@@ -75,4 +80,8 @@
     letter-spacing: .3px;
     background-color: #b3e5fc;
     color: #23547b;
+}
+
+#btn-editar {
+    margin-right: .5rem !important;
 }
