--- a/src/app/seguranca/login/login.component.html
+++ b/src/app/seguranca/login/login.component.html
@@ -16,7 +16,7 @@
 
                     <div class="p-field p-fluid">
                         <label for="email">E-mail</label>
-                        <input id="email" type="email" name="email" [(ngModel)]="login.email" placeholder="e-mail" pInputText required email #email="ngModel" ngModel/>
+                        <input id="email" type="email" name="email" [(ngModel)]="login.email" placeholder="@bombeirospb.gov" pInputText required email #email="ngModel" ngModel/>
 
                         <app-mensagem-de-erro [controle]="email" erro="required" mensagem="Informe o email"></app-mensagem-de-erro>
                         <app-mensagem-de-erro [controle]="email" erro="email" mensagem="E-mail inválido"></app-mensagem-de-erro>
