--- a/src/app/incendios/incendios-pesquisa/incendios-pesquisa.component.html
+++ b/src/app/incendios/incendios-pesquisa/incendios-pesquisa.component.html
@@ -1,8 +1,8 @@
 <div class="container">
 
-    <h1>Incêndios ({{incendios.length}})</h1>
+    <h1>Incêndios</h1>
 
-    <p-table [value]="incendios" [paginator]="true" currentPageReportTemplate="{first} a {last} de {totalRecords} incêndios" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]">
+    <p-table [value]="incendios" [rowHover]="true">
 
         <ng-template pTemplate="caption">
 
@@ -22,17 +22,12 @@
 
                         <button class="btn-buscar" pButton icon="pi pi pi-search" pTooltip="Buscar" tooltipPosition="bottom" (click)="filtrar()"></button>
                     </div>
-
-
                 </div>
-
-
 
                 <div>
                     <a class="btn-new-user button-link" pButton icon="pi pi-plus-circle" pTooltip="Novo incêndio" tooltipPosition="bottom" routerLink="/incendios/novo"></a>
                 </div>
             </div>
-
 
         </ng-template>
 
@@ -65,19 +60,32 @@
             </tr>
         </ng-template>
 
+
+        <ng-template pTemplate="footer">
+            <tr>
+                <td colspan="6">
+                    <div class="buttons-prev-next">
+                        <button class="prev" type="button" pButton icon="pi pi-chevron-left" (click)="onPrev()" [disabled]="prevKeys?.length == 0" label="Anterior"></button>
+                        <button class="next" type="button" pButton icon="pi pi-chevron-right" iconPos="right" (click)="onNext()" [disabled]="nextKey == null" label="Próximo"></button>
+                    </div>
+                </td>
+            </tr>
+        </ng-template>
+
         <ng-template pTemplate="emptymessage">
             <tr>
                 <td colspan="6">Nenhum foco de incêndio encontrado</td>
             </tr>
+            <tr>
+                <td colspan="6">
+                    <p-progressSpinner class="spinner" *ngIf="spinnerIsActive" strokeWidth="3" animationDuration="1s"></p-progressSpinner>
+                </td>
+            </tr>
         </ng-template>
     </p-table>
 
-    <!-- <h1>prev key{{prevKeys?.length}}</h1>
-    <h1>next key {{nextKey}}</h1>
-    <button type="button" pButton (click)="onPrev()" *ngIf='prevKeys?.length'>Prev</button>
-    <button type="button" pButton (click)="onNext()" *ngIf='nextKey'>Next</button> -->
 
-    <p-progressSpinner class="spinner" *ngIf="spinnerIsActive" strokeWidth="3" animationDuration="1s"></p-progressSpinner>
+
 </div>
 
 
