--- a/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.css
+++ b/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.css
@@ -26,6 +26,10 @@
     width: 17rem;
 }
 
+.user.true {
+    background-color: red;
+}
+
 .card-footer.true {
     display: flex;
     align-items: center;
