--- a/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
+++ b/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
@@ -61,6 +61,9 @@
 
     </p-dataView>
 
+    <h1>prev: {{prevKeys?.length}}</h1>
+    <h1>next: {{nextKey}}</h1>
+
     <p-progressSpinner class="spinner" *ngIf="spinnerIsActive" strokeWidth="3" animationDuration="1s"></p-progressSpinner>
 
 </div>
