--- a/src/app/core/pagina-nao-encontrada/pagina-nao-encontrada.component.html
+++ b/src/app/core/pagina-nao-encontrada/pagina-nao-encontrada.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="text-center">
         <h1>404</h1>
-        <p><b>OOPS, PÁGINA NÃO ENCONTRADA!</b></p>
+        <p><b>OPS, PÁGINA NÃO ENCONTRADA!</b></p>
         <p>Desculpe, mas a página que você está procurando não existe, foi removida, teve seu nome alterado ou está temporariamente indisponível.</p>
     </div>
 </div>
