--- a/src/app/incendios/incendios-cadastro/incendios-cadastro.component.css
+++ b/src/app/incendios/incendios-cadastro/incendios-cadastro.component.css
@@ -2,12 +2,16 @@
     margin: 0;
 }
 
-.card {
-    margin-top: 1rem;
+.conteudo {
+    margin: 1rem 0;
 }
 
 :host ::ng-deep .p-card .p-card-content {
     padding-bottom: 0;
+}
+
+:host ::ng-deep .p-card .p-card-body {
+    padding-bottom: 0.5rem;
 }
 
 .text-center {
@@ -16,6 +20,12 @@
 
 :host ::ng-deep .p-fieldset {
     margin-bottom: 1rem;
+}
+
+:host ::ng-deep .p-fieldset .p-fieldset-legend {
+    background-color: #78c1fd52;
+    /* text-transform: uppercase; */
+    font-weight: bold;
 }
 
 form .footer {
@@ -33,4 +43,20 @@ form .footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+
+/* Chrome, Safari, Edge, Opera */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
+/* Firefox */
+
+input[type=number] {
+    -moz-appearance: textfield;
 }
