--- a/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.html
+++ b/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.html
@@ -1,4 +1,4 @@
-<div class="p-grid p-justify-center card">
+<div class="p-grid p-justify-center conteudo">
 
     <div class="p-col-11 p-sm-10 p-md-4">
 
