--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -37,7 +37,7 @@
 
         <li class="navbar-menuitem">
             <a routerLink="/incendios" (click)="omitir()">
-                <i class="fa fa-fire-extinguisher menu-icon incendio-icon"></i>
+                <fa-icon [icon]="icones.extintor" class="menu-icon"></fa-icon>
                 <span>Incêndios</span>
             </a>
         </li>
