Alteração nas consultas ao firebase

--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
   <div>
     <!-- Cards Quantitativos -->
     <div class="p-d-flex p-jc-center p-flex-wrap container-card">
-      <div *ngFor="let dados of dadosEstaticos">
+      <div *ngFor="let dados of dadosQuantitativos">
         <app-card-info [imagem]=dados.imagem [titulo]=dados.titulo [dado]=dados.dado></app-card-info>
       </div>
     </div>
